--- a/views/charts.jade
+++ b/views/charts.jade
@@ -149,11 +149,11 @@ html(lang='en')
             li
               a(href='javascript:;', data-toggle='collapse', data-target='#demo')
                 i.fa.fa-fw.fa-arrows-v
-                |  Dropdown 
+                |  Account Options 
                 i.fa.fa-fw.fa-caret-down
               ul#demo.collapse
                 li
-                  a(href='#') Accounts
+                  a(href='#') Manage Accounts
                 li
                   a(href='#') New Account
             li
