--- a/views/index.jade
+++ b/views/index.jade
@@ -196,7 +196,7 @@ html
                     .col-xs-3
                       i.fa.fa-users.fa-5x
                     .col-xs-9.text-right
-                      .huge 12
+                      .huge #{accountCount - 1}
                       div Active Accounts!
                 a(href='#')
                   .panel-footer
@@ -374,3 +374,4 @@ html
     script(src='javascripts/plugins/morris/raphael.min.js')
     script(src='javascripts/plugins/morris/morris.min.js')
     script(src='javascripts/plugins/morris/morris-data.js')
+
