Changed User Signup to raw SQL

--- a/views/forms.jade
+++ b/views/forms.jade
@@ -52,7 +52,7 @@ html(lang='en')
                       img.media-object(src='http://placehold.it/50x50', alt='')
                     .media-body
                       h5.media-heading
-                        strong #{user.username}
+                        strong
                       p.small.text-muted
                         i.fa.fa-clock-o
                         |  Yesterday at 4:32 PM
@@ -64,7 +64,7 @@ html(lang='en')
                       img.media-object(src='http://placehold.it/50x50', alt='')
                     .media-body
                       h5.media-heading
-                        strong #{user.username}
+                        strong
                       p.small.text-muted
                         i.fa.fa-clock-o
                         |  Yesterday at 4:32 PM
@@ -76,7 +76,7 @@ html(lang='en')
                       img.media-object(src='http://placehold.it/50x50', alt='')
                     .media-body
                       h5.media-heading
-                        strong #{user.username}
+                        strong
                       p.small.text-muted
                         i.fa.fa-clock-o
                         |  Yesterday at 4:32 PM
@@ -118,7 +118,7 @@ html(lang='en')
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               i.fa.fa-user
-              |  #{user.username} 
+              |  
               b.caret
             ul.dropdown-menu
               li
