Fixed and set up full SQL user auth

--- a/views/index.jade
+++ b/views/index.jade
@@ -226,7 +226,7 @@ html
                     .col-xs-3
                       i.fa.fa-user-times.fa-5x
                     .col-xs-9.text-right
-
+                      .huge 0
                       div Inactive!
                 a(href='#')
                   .panel-footer
