--- a/views/signin.html
+++ b/views/signin.html
@@ -50,7 +50,7 @@
                    
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input id="user" type="text" class="form-control" name="username" value="" placeholder="Username">                                        
+                        <input id="user" type="text" class="form-control" name="email" value="" placeholder="Email">                                        
                     </div>
 
                     <div class="input-group">
@@ -89,7 +89,7 @@
                    
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input id="user" type="text" class="form-control" name="username" value="" placeholder="Username">                                        
+                        <input id="user" type="text" class="form-control" name="email" value="" placeholder="Email">                                        
                     </div>
 
                     <div class="input-group">
